plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.107'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven {
        url "https://cursemaven.com"
        content { includeGroup "curse.maven" }
    }
    // JEI compile-only API (plugin module is runtime-optional — we never
    // ship the JEI jar, just compile against its interfaces).
    maven {
        url "https://maven.blamejared.com/"
        content { includeGroup "mezz.jei" }
    }
    // JUnit and other standard test/build dependencies. Scoped after cursemaven
    // so the explicit `includeGroup` above keeps curse artifacts routed correctly.
    mavenCentral()
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    // Wires the Minecraft + NeoForge classpath (and its transitive deps — DFU,
    // Gson, Mojang authlib, etc.) into the `test` source set. Without this the
    // test compile fails with "cannot find symbol" for net.minecraft.util.*,
    // com.mojang.serialization.*, and com.google.gson.* — classes that are
    // supplied by the NeoForged userdev artifact at runtime but are NOT
    // transitively exposed to the test source set by default.
    //
    // `testedMod` tells moddev which mod's classpath to inherit; we only have
    // one, so it's `mods.named(mod_id)`. Moddev 2.0.107+ supports this DSL.
    unitTest {
        enable()
        testedMod = mods.named(mod_id)
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "curse.maven:ctm-267602:5587515"
    jarJar "curse.maven:ctm-267602:5587515"

    // --- Optional compat: JEI ---
    // compileOnly so the plugin module (com.thebeyond.compat.jei) can
    // reference JEI's API types. NOT shipped. When JEI is absent at
    // runtime, the @JeiPlugin-annotated class is never scanned/loaded,
    // so no NoClassDefFoundError — the class file sits inert in the jar.
    compileOnly "mezz.jei:jei-${minecraft_version}-common-api:${jei_version}"
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"

    // --- Unit tests ---
    // JUnit 5 for pure-function tests (pingPongWrap, computeWrappedCoords contract,
    // HashSimplexNoise determinism). These tests intentionally do NOT spin up
    // Minecraft — they exercise math and packing logic that should hold whether
    // or not the game is running. See src/test/java/... for coverage.
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            jei_version            : jei_version
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += [
            "-AoutRefMap=${mod_id}.refmap.json"
    ]
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
